syntax = "proto3";
package content_service;

message FeedProfile {
    int32 id = 1;
    string url = 2;
    optional string name = 3;
    optional string logo = 4;
    optional string description = 5;
    optional string category_algo = 6;
    optional string tags_algo = 7;
};
